--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,11 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4AEGy6_dkcwnHN0_opkDtdf3NzPEnrlI&callback=initMap"
-          type="text/javascript"></script>
+
+  <link rel="stylesheet" href="https://openlayers.org/en/v4.6.5/css/ol.css" type="text/css">
+  <script src="https://openlayers.org/en/v4.6.5/build/ol.js" type="text/javascript"></script>
+
+  <script src="http://www.openlayers.org/api/OpenLayers.js"></script>
 </head>
 <body class="mat-typography">
   <app-root></app-root>
